# miggy

./: .gitignore  .readthedocs.yaml  AUTHORS.md  AUTHORS.rst  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: api.rst  cli.rst  conf.py  ext.rst  howto.rst  index.rst  quickstart.rst
examples/quickstart/app/: models.py
examples/quickstart/migrations/: 001_auto_20251115_1342.py  002_auto_20251115_1344.py  conf.py
miggy/: __init__.py  __main__.py  auto.py  cli.py  deconstructor.py  migrator.py  operations.py  router.py  schema.py  serializer.py  state.py  template.txt  types.py  utils.py  writer.py
miggy/ext/: __init__.py  factory.py  fields.py  utils.py
peewee_migrate/: __init__.py  __main__.py  auto.py  cli.py  ext.py  migrations.py  migrator.py  router.py  template.txt  types.py  utils.py
tests/: conftest.py  helpers.py  test_auto.py  test_cli.py  test_deconstructor.py  test_ext.py  test_migrator.py  test_router.py  test_schema.py  test_serializer.py  test_state.py  test_utils.py  test_writer.py
tests/auto/: test_indexes.py
tests/migrations/: 001_test.py  002_test.py  003_tespy.py  004_test_insert.py
tests/resources/transaction_test/: w_transaction.py  wo_transaction.py
tests/test_auto/: test_auto.py  test_field_to_code.py
tests/test_auto/test_autogeneration/: test_add_field.py  test_add_fields.py  test_alter_field.py  test_change_fields.py  test_common.py  test_create_model.py  test_default_constraints.py  test_indexes.py  test_remove_model.py  test_rename_table.py
tests/test_autodiscover/: test_autodiscover.py
tests/test_autodiscover/some_folder_four/: __init__.py  module.py  references_holder.py
tests/test_autodiscover/some_folder_three/: base_model_s.py
tests/test_autogeneration/: test_common.py  test_indexes.py
tests/test_ext/: conftest.py  models.py  test_factory.py  test_fields.py  utils.py
tests/test_migrator/: test_add_fields.py  test_add_index.py  test_change_fields.py  test_change_nullable.py  test_common.py  test_create_model.py  test_remove_fields.py  test_remove_model.py  test_rename_field.py
tests/test_operations/: test_add_field.py  test_add_primary_key_constraint.py  test_alter_field.py  test_change_fields.py  test_create_model.py  test_remove_field.py  test_remove_model.py  test_remove_primary_key_constraint.py
