[project]
name = "miggy"
version = "2.1.0"
authors = [
  {name = "Gorshkov Nikolay", email = "nogamemorebrain@gmail.com"},
  {name = "Kirill Klenov"},
  {name = "spumer"},
]
description = "a database migration tool for usage with the peewee ORM"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Natural Language :: Russian',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Testing',
    'Topic :: Utilities',
]
license = "BSD-4-Clause"

dependencies = [
    "peewee>=3.17.9",
    "click>=8.3.1"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "psycopg2-binary>=2.8.1",
    "ruff==0.14.7",
    "poethepoet==0.37.0",
    "mypy==1.18.2",

]
docs = [
    "Sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-click==6.1.0"
]



[project.urls]
Homepage = "https://github.com/kalombos/miggy"
Issues = "https://github.com/kalombos/miggy/issues"


[project.scripts]
miggy = "miggy.cli:cli"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "miggy"
module-root = ""

[tool.mypy]
exclude = "(venv|migrations|docs)"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
exclude = [
    "docs",
]

[tool.ruff.lint]
select = [
    'A',
    'B',
    'C',
    'E',
    'F',
    'G',
    'I',
    'DTZ',
    'UP035',
    'TC'
]


[tool.poe.executor]
type = "simple"


[tool.poe.tasks.lint]
help = "Run the type checker"
cmd  = "ruff check"

[tool.poe.tasks.types]
help = "Run the type checker"
cmd  = "mypy ."

[tool.poe.tasks.check_format]
help = "Run the format checker"
cmd  = "ruff format --check"

[tool.poe.tasks.format_by_checker]
help = "Run the check formater"
cmd  = "ruff check --fix-only -e"

[tool.poe.tasks.format_by_formatter]
help = "Run the ruff formatter"
cmd  = "ruff format"

[tool.poe.tasks.format]
help = "Run ruff check and ruff format formatters"
sequence  = ["format_by_checker", "format_by_formatter"]

[tool.poe.tasks.test]
help = "Run tests"
cmd  = "pytest -vv -x"

[tool.poe.tasks.check]
help = "Run all checks on the code base"
sequence = ["lint", "check_format", "types", "test"]
